create and remove pages (#30)
- create page ( Issue #9 )
- remove page ( Issue #10 )
- removed css file references caused 404
- created on page panel component
- store open/close status of on page panel in local storage
- changing ignore path
- we use preview (image if available, else iframe of html template)
- refactoring how components are loaded
- added polyfill for HTML Import (Now supports the browsers we say we
should)

--- a/admin/index.html
+++ b/admin/index.html
@@ -15,9 +15,10 @@
       <meta name="theme-color" content="#3A5C78">
   </head>
   <body class="sw-body">
-      <div data-staticweb-component="swlogin" data-staticweb-perm-type="visitor">
+      <div data-staticweb-component="sw-onpage-options"></div>
+      <div data-staticweb-component="sw-login" data-staticweb-perm-type="visitor">
       </div>
-      <div data-staticweb-component="swtext" style="display: none;">
+      <div data-staticweb-component="sw-text" style="display:none" id="logged-in-text">
         HEJ ADMIN, HÄR ÄR DIN DASHBOARD!
       </div>
       <script async="async" src="js/swchecker.js"></script>
